Corrected the navigation bar. Set the hero to a column. Attempted to align #trending into a row

--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,16 @@ nav {
   background-color: white;
   padding: 8px 16px;
   display: flex;
+  justify-content: space-between;
 }
 
-#destinations{
-    display:flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
- #actions {
-    display: flex;
-    justify-content: space-evenly;
+#destinations,
+#actions {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 p {
@@ -30,6 +29,10 @@ p {
 }
 
 section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   height: 460px;
   background-color: black;
   color: white;
@@ -102,8 +105,13 @@ nav button {
 }
 
 #trending p {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap:wrap;
+  justify-content: space-evenly;
   background-color: white;
-  color: black;
+  color: rgb(2, 0, 0);
   border-radius: 50px;
   padding: 6px 15px;
 }
